<resources>
    <string name="app_name">Anime Openings</string>
    <string name="app_settings_name">Anime Openings Settings</string>

    <string name="pref_general_category">Anime Openings Settings</string>
    <string name="pref_loop_video">Loop Video</string>
    <string name="pref_loop_video_sum">Loop the video at the end instead of proceeding to the next one.</string>


    <!--<string name="pref_openings_only">Openings Only</string>
    <string name="pref_openings_only_sum">Only play openings, no endings.</string>-->
    <string name="pref_type">Video Type</string>
    <string name="pref_type_sum">The type of videos to play.</string>

    <string name="pref_openings_cp">Play in Background</string>
    <string name="pref_openings_cp_sum">Continue playing after the screen is turned off or after the app is closed. (Buggy and may not work on all devices)</string>

    <string name="pref_subtitles">Enable Subtitles</string>
    <string name="pref_subtitles_sum">Show subtitles. If this option is enabled, videos may take a few seconds longer to buffer. Not all videos have subtitles and subtitle styles are not preserved.</string>

    <string name="pref_eastereggs">Enable Easter Eggs</string>
    <string name="pref_eastereggs_sum">:P</string>
    
    <string name="pref_openpe">Advanced Preferences</string>
    <string name="pref_openpe_sum">For advanced users only! Opens SharedPreferences editor.</string>

    <string name="activity_pe_label">Advanced Settings</string>

    <string name="activity_pb_label">Playlist Builder</string>
    <string name="activity_pb_shint">Search</string>
    <string name="activity_pb_regex">Regex</string>
    <string name="activity_pb_regex_on">Regex ON</string>
    <string name="activity_pb_regex_off">Regex OFF</string>
    <string name="activity_pb_selAll">All</string>
    <string name="activity_pb_selNone">None</string>
    <string name="activity_pb_sel">Select</string>
    <string name="activity_pb_clear_enable">Playlist ENABLED</string>
    <string name="activity_pb_clear_disable">Playlist DISABLED</string>

    <string name="pref_pb">Open Playlist Builder</string>
    <string name="pref_pb_sum">Allows you to specify the songs to play.</string>

    <string name="pref_version">Version</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content"><b>CONTROLS:</b>\n
        Swipe Left: Previous Video\n
        Swipe Right: Next Video\n
        Swipe Down: Show Video Info\n
        Swipe Up: Show Controls\n
        Menu Key: Settings</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="N_A">N/A</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="close">Close</string>
    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>
</resources>
