<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<gq.nulldev.animeopenings.app.util.AdPreference android:layout="@layout/ad_layout"/>-->

    <PreferenceCategory android:title="@string/pref_general_category" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="prefLoopVideo"
            android:summary="@string/pref_loop_video_sum"
            android:title="@string/pref_loop_video" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefContinuePlaying"
            android:summary="@string/pref_openings_cp_sum"
            android:title="@string/pref_openings_cp" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefSubtitles"
            android:summary="@string/pref_subtitles_sum"
            android:title="@string/pref_subtitles" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefEasterEggs"
            android:summary="@string/pref_eastereggs_sum"
            android:title="@string/pref_eastereggs" >
        </CheckBoxPreference>
        <ListPreference
            android:title="@string/pref_type"
            android:summary="@string/pref_type_sum"
            android:key="prefVideoType"
            android:defaultValue="all"
            android:entries="@array/videoTypeSum"
            android:entryValues="@array/videoTypeValue" />
        <gq.nulldev.animeopenings.app.util.OpenPBPref
            android:title="@string/pref_pb"
            android:summary="@string/pref_pb_sum"/>
        <gq.nulldev.animeopenings.app.util.OpenPEPref
            android:title="@string/pref_openpe"
            android:summary="@string/pref_openpe_sum"/>
    </PreferenceCategory>

    <gq.nulldev.animeopenings.app.util.VersionPreference android:title="@string/pref_version" />

</PreferenceScreen>